# filmweb-arr-sync

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.yaml.example  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-build.yml
filmweb_arr_sync/: __main__.py  batch_processor.py  config.py  health.py  scheduler.py  state.py  sync.py
filmweb_arr_sync/arr/: radarr.py  sonarr.py
filmweb_arr_sync/bot/: handler.py  links.py  runner.py  telegram.py  watchlist.py
filmweb_arr_sync/filmweb/: client.py  models.py
tests/: test_bot_handler.py  test_bot_links.py  test_config.py  test_filmweb_client.py  test_models.py  test_radarr.py  test_scheduler.py  test_sonarr.py  test_state.py  test_sync.py
