[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filmweb-arr-sync"
version = "1.1.0"
description = "Sync your Filmweb.pl 'Want to See' watchlist to Radarr and Sonarr"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "bartekmp" }
]
keywords = ["filmweb", "radarr", "sonarr", "watchlist", "media", "homelab"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
filmweb-arr-sync = "filmweb_arr_sync.__main__:main"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["filmweb_arr_sync"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = ""

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
